Successfully solved Stretch Goals.

--- a/src/styles.css
+++ b/src/styles.css
@@ -64,6 +64,7 @@ h1 {
 	font-size: 2rem;
 	line-height: var(--header-height);
 	text-align: center;
+	color: white;
 }
 
 @media (max-width: 25rem) {
@@ -149,13 +150,14 @@ h1 {
 
 .guess-input-wrapper label {
 	font-size: 1.25rem;
+	color: white;
 }
 
 .guess-input-wrapper input {
 	display: block;
 	width: 100%;
 	font-size: 2rem;
-	border: 2px solid var(--color-gray-300);
+	border: 2px solid var(--color-gray-500);
 	border-radius: 4px;
 	padding: 8px 16px;
 	outline-offset: 4px;
@@ -174,15 +176,37 @@ h1 {
 	animation: slideUp 750ms cubic-bezier(0, 0.72, 0.24, 1.02);
 	border-radius: 4px 4px 0px 0px;
 	will-change: transform;
+
+	button {
+		background: white;
+		padding: 0.5rem 1rem;
+		border-radius: 0.25rem;
+		font-weight: 600;
+		transition: all 100ms ease-in-out;
+
+		&:hover {
+			box-shadow: 0 0 0.5rem 0.25 white;
+			padding: 0.5rem 1.25rem;
+		}
+	}
 }
 
 .happy.banner {
 	background: var(--color-success);
 	color: white;
+
+	button {
+		color: var(--color-success);
+	}
 }
+
 .sad.banner {
 	background: var(--color-error);
 	color: white;
+
+	button {
+		color: var(--color-error);
+	}
 }
 
 .visually-hidden {
@@ -262,14 +286,17 @@ h1 {
 
 			&.correct {
 				background: var(--color-success);
+				border-color: var(--color-success);
 			}
 
 			&.incorrect {
-				background: var(--color-gray-700);
+				background: var(--color-gray-300);
+				border-color: var(--color-gray-300);
 			}
 
 			&.misplaced {
 				background: var(--color-warning);
+				border-color: var(--color-warning);
 			}
 		}
 	}
